<resources>
    <string name="app_name">Jagafakta</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="home">Home</string>
    <string name="jaga_fakta">Jaga Fakta</string>
    <string name="img1">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_berita">Scan Berita</string>
    <string name="back">Back</string>
    <string name="profile">Profile</string>
    <string name="default_web_client_id">699911988195-7egamdikpi6ahdosn1jahe8dssbbd7ol.apps.googleusercontent.com</string>
    <string name="ayo_cari_tahu_kebenaran_berita_hari_ini">Ayo cari tahu kebenaran berita hari ini!</string>
    <string name="history">History</string>
    <string name="halo_user">Halo, User</string>
    <string name="todo">TODO</string>
    <string name="analyze">Analyze</string>
    <string name="galeri">Galeri</string>
    <string name="scan">Scan</string>
    <string name="inputkan_potongan_berita">Inputkan potongan berita</string>
    <string name="analyze1">Analyze</string>
    <string name="di_sini_teks_hasil_scan_input">(di sini teks hasil scan / input)</string>
    <string name="hoax">HOAX</string>
    <string name="fact_check">Fact check:</string>
    <string name="edit">Edit</string>
    <string name="simpan">Simpan</string>
    <string name="result">Result</string>
    <string name="related_news">Related News:</string>
    <string name="search_hint">Cari riwayat…</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="belum_punya_akun_daftar">Belum punya akun? Daftar</string>
    <string name="atau">Atau</string>
    <string name="masuk_dengan_google">Masuk dengan Google</string>
    <string name="lupa_kata_sandi">Lupa kata sandi?</string>
    <string name="register">Register</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="sudah_punya_akun_login">Sudah punya akun? Login</string>
</resources>