<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    tools:context=".ui.apk.result.ResultActivity">


    <TextView
        android:id="@+id/headresult"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="#000000"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="Result"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:padding="4dp"
        android:src="@drawable/arrow"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/headresult"
        app:layout_constraintBottom_toBottomOf="@id/headresult" />


    <TextView
        android:id="@+id/labelFactCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/fact_check"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headresult" />

    <TextView
        android:id="@+id/LabelResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/red"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:minWidth="92dp"
        android:minHeight="39dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/hoax"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/labelFactCheck"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/tvExtractedText"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/grey"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/di_sini_teks_hasil_scan_input"
        android:padding="8dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/labelFactCheck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/labelRelated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Related News"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvExtractedText" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRelated"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/labelRelated"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_related" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_nav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
